src/styles.scss
html,
body {
  height: 100%;
}

body {
  margin: 0;
  -webkit-tap-highlight-color: transparent !important;
}

@font-face {
  font-family: 'Material Icons Outlined';
  font-style: normal;
  font-weight: 400;
  src: url(/assets/fonts/material-icons.woff2) format('woff2');
}

.material-icons-outlined {
  font-family: 'Material Icons Outlined';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  font-feature-settings: 'liga';
  -webkit-font-feature-settings: 'liga';
  -webkit-font-smoothing: antialiased;
}

.mat-toolbar {
  border-bottom: 1px solid #E0E0E0;
}

button[mat-icon-button] {
  color: #424242;
}

.scroll-container {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.scroll-container .scroll {
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
}

.mat-icon {
  font-family: 'Material Icons Outlined';
  font-size: 24px;
}

mat-checkbox.multiline {
  .mat-checkbox-layout {
    white-space: normal;
    align-items: end;
    vertical-align: top;
  }

  .mat-checkbox-layout .mat-checkbox-label {
    line-height: 16px;
  }

  .mat-checkbox-inner-container {
    margin: 0px;
    margin-right: 8px;
  }
}

